Patient/patient-clinic.css
/* Body Styling */
:root {
  --background: #f9f9f9;
  --primaryText: #180126;
  --secondaryText: #7e7a8f;
  --tertiaryText: #c3c7d2;
  --primaryColor: #3a5df8;
  --secondaryColor: #f3ea12;
}
* {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}
body {
    margin: 0;
    padding:0;
    color: var(--primaryText);
    font-family: "Open Sans", sans-serif;
}
main {
    grid-area: main;
}

.back {
    margin-left: 30px;
}
.main-heading {
    text-align: center;
}

h1 {
  font-size: 30px;
  font-weight: 700;
}
h2 {
    font-size: 24px;
    font-weight: 700;
}
h3 {
    font-size: 21px;
    font-weight: 700;
    margin: 15px;
}
p {
  font-size: 16px;
  font-weight: 400;
}

.filter {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
.pharmacies {
    text-decoration: underline;
    text-decoration-color: #3A5DF8;
}
.clinics {
    text-decoration: underline;
    text-decoration-color: #C3C7D2;
}
.filter a:link,
.filter a:visited {
    color: var(--primaryText);
}

.search {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 15px;
}


input, select {
    width: 250px;
    margin-right: 10px;
    margin-bottom: 10px;
    padding: 10px;
    border: 1px solid var(--tertiaryText);
    border-radius: 4px;
}
input {
    background-color: var(--background);
}

select {
    background-color: #fff;
}

input:focus,
select:focus,
input:hover,
select:hover {
    border: 1px solid var(--secondaryColor) !important;
    box-shadow: 0 0 5px var(--secondaryColor);
    outline-offset: 0;
    outline: none;
}

.search-btn {
    background: var(--secondaryColor);
    color: var(--primaryText);
    font-size: 13px;
    font-weight: 700;
    border: none;
    border-radius: 5px;
    padding: 12px 30px;
    width: 160px;
    text-align: center;
    /*margin: 0 auto;*/
}

.search-btn:hover {
    background-color: var(--background);
    border: 1px solid var(--primaryColor);
    color: var(--primaryColor);
}
button {
    cursor: pointer;
}

/* ˅ This is so all the content sections have the same border, color and are vertically centered */
.border-style {
    border-radius: 20px;
    background-color: #fff;
    border: 1px solid var(--tertiaryText);
    align-items: center;
    padding: 15px 60px;
    margin: 30px;
    max-height: 65vh;
    overflow: scroll;
}
.bubble-style:hover {
    background-color: #DAE4FF;
}

.bubble-style{
  border-radius: 20px;
    background-color: var(--background);
    border: 1px solid var(--tertiaryText);
    align-items: center;
}
/* This controls the layout of the page and stacks everything for mobile view (mobile first)  */
.wrapper {
  display: grid;
  grid-template-areas: 
      "header"
      "sidebar"
      "main";
}

/************************************ Section Styling ************************************/

/********** Nav Mobile View**********/
header {
  grid-area: header;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  padding: 20px 20px;
}
nav {
  grid-area: sidebar;
}
.logo {
  width: 60%;
  margin: 0;
}
.hamburger {
  display: block;
  float: right;
}
button.hamburger {
 padding: 0;
 margin: 0;
 background-color: transparent;
 border: none;
}

.nav-ul {
  display: none;
  flex-direction: column;
  width: 100%;
  padding: 0;
  margin: 0;
  height: 70vh;
  background-color: var(--primaryColor);
  z-index: 10;
} 
.nav-ul a {
  color: white;
  text-decoration: none;
  line-height: 1.5;
}
.nav-ul li {
  padding: 20px;
  list-style-type: none;
}
.nav-ul img {
  vertical-align: middle;
  margin-right: 5px;
}
.nav-ul.show {
   display: flex;
}

.active-link {
    color: var(--secondaryColor) !important;
    font-weight: 700;
}

/***** Recent Visits *****/
.results {
    grid-area: doctors;
    align-items: center;
    padding: 15px 60px;
    margin: 30px;
    max-height: 65vh;
    overflow: scroll;
}
.results .heading{
  margin-bottom: 15px;
}
.results-bubble {
  display: grid;
  justify-content: center;
  text-align: center;
  margin: 10px 0;
}

.clinic {
  padding: 5px 0;
  margin: 0 10px;
}

.bubble-heading {
  display: none;

}




/************************Styling for Laptops and Small Screens 769px and up*****************************/
@media only screen and (min-width: 769px) {
 
  /* This creates a two column view and makes the sidebar navigation visible  */
  .wrapper {
    grid-template-columns: 275px  1fr;
    grid-template-areas: 
        "header  header"
        "sidebar main";
    margin-right: 2rem;
  }

  /***** Need this to make nav visible *****/
  /***** Nav *****/
  .logo {
    width: 250px;
  }
 .nav-ul {
   display: flex;
   background-color: var(--primaryColor);
   border-radius: 0 20px 0 0;
   color: var(--background);
   height: 100vh;
   padding-top: 0;
   position: sticky;
   top: 0px;
 }
 
  nav a:hover,
  .activeLink {
    color: var(--secondaryColor);
  }

  .nav-ul li {
    line-height: 50px;
  }
  .nav-ul img {
    vertical-align: middle;
    padding-right: 5px;
  }
  
  /* hides hamburger button */
  .hamburger {
    display: none;
  }

}



/************************Styling for Desktops and Large Screens 1200px Up*****************************/
@media (min-width: 1200px) {
  /* This creates a 3 column view  */
    .wrapper {
        grid-template-columns: 275px 1fr;
        grid-template-areas: 
            "header  header"
            "sidebar main";
    }

    h1 {
      font-size: 30px;
    }

    .filter {
        flex-direction: row;
    }
    .search {
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }
    input {
        width: 250px;
        background-color: var(--background);
    }

    select {
        width: 160px;
        background-color: #fff;
    }

    /***** Styling Desktop View n*****/
    .results {
      margin-bottom: 1rem;
      margin-left: 2rem;
    }
    .results-bubble {
      display: grid;
      grid-template-areas: 
        "doctor clinic phone ";
      grid-template-columns: 1fr 1fr 1fr;
      text-align: left;
      padding: .25rem 1rem;
      justify-content: space-between;
    }
    .results-bubble .result {
      display: flex;
      justify-content: start;
    }

    .clinic {
      grid-area: clinic;
    }
    .phone {
      grid-area: phone;
    }

    .bubble-heading {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      padding: 0;
      margin-left: 30px;
      margin-bottom: -20px;
    }
    button {
        margin-top: 0;
    }
    
}

